* fix the bug of footer fixed on IE6.

--- a/trunk/www/theme/default/style.css
+++ b/trunk/www/theme/default/style.css
@@ -102,7 +102,7 @@ tr, th, td {padding:3px}
 
 /*-----------------------SPECIAL PART SETTING--------------------*/
 #navbar    {font-weight:bold; font-size:108%; margin:5px 10px 0px 10px; padding:0;}
-#navbar ul {margin:0; padding:0; width:100%; line-height: 2; border:none} 
+#navbar ul {margin:0; padding:0; line-height: 2; border:none} 
 #navbar li {margin:0; padding:0; float:left; text-align:center; list-style-type:none}
 
 #mainmenu ul {background-color:#D6E7FF; height:28px} /* 必须设定高度，以支持opera。*/
