--- a/trunk/www/theme/ie.6.css
+++ b/trunk/www/theme/ie.6.css
@@ -1,3 +1,3 @@
 html{overflow:hidden;}
-body{height:100%;width:100%; overflow-y:scroll;overflow-x:hidden}
+body{height:100%; overflow:auto}
 div#footer{position:absolute;}
